<resources>
    <string name="app_name">Mobile Examination Checker</string>
    <string name="signin_txt">Sign In</string>
    <string name="edittxt_email_hint">Email</string>
    <string name="edittxt_password_hint">Password</string>
    <string name="button_login">Login</string>
    <string name="forgotpass_txt">Forgot password?</string>
    <string name="createAcc_txt">Create an account</string>
    <string name="stud_reg_txt">Student Registration</string>
    <string name="stud_id_txt_hint">Student Id</string>
    <string name="name_txt">Name</string>
    <string name="last_name_txt">Last Name</string>
    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>
    <string name="gender">Gender:</string>
    <string name="stud_reg_email_txt">Email</string>
    <string name="reg_pass">Password</string>
    <string name="reg_btn">Register</string>
    <string name="reg_back_btn">Back</string>
    <string name="reg_stud_dial_btn">Student</string>
    <string name="reg_prof_dial_btn">Instructor</string>
    <string name="dialog_textview">Register as a:</string>
    <string name="prof_reg_txt">Instructor Registration</string>
    <string name="prof_reg_email">Email</string>
    <string name="prof_mobile_num">Mobile number</string>
    <string name="logout">Logout</string>
    <string name="txtview_mainpage">I\'m the main page</string>
    <string name="reset_pass_txt">RESET YOUR PASSWORD</string>
    <string name="reset_pass_email">Enter your Email</string>
    <string name="ResetPass_btn">Reset Password</string>
    <string name="forgot_pass_dialog">Check your Email to reset your password!</string>
    <string name="ok_dialog_btn">Okay</string>
    <string name="verify_email">Your account has been registered. Check your email to verify your account!</string>
    <string name="hello">Hello,</string>
    <string name="john">John</string>
    <string name="search">search</string>
    <string name="create">Create Exam</string>
    <string name="profile">profile</string>
    <string name="answers">Scores</string>
    <string name="scanner">Scanner</string>
    <string name="cvsu_imus">CvSU-Imus</string>
    <string name="mobile_examination_checker_system_for_cvsu_imus_students_and_faculties">Mobile Examination Checker System for CvSU - Imus Students and Faculties</string>
    <string name="Change_password">Change Password</string>
    <string name="New_password">New Password</string>
    <string name="Confirm_new_password">Confirm New Password</string>
    <string name="Confirm">Confirm</string>
    <string name="Back">Back</string>
    <string name="prof">Instructor</string>
    <string name="stud">Student</string>
    <string name="take_exam">Take Exam</string>
    <string name="create_exam">Create Exam</string>
    <string name="gned10">GNED 10</string>
    <string name="editExam">EDIT EXAM</string>
    <string name="dateCreated">Date Created:</string>
    <string name="curDate">1/15/2</string>
    <string name="exam_code_txt">Exam Code:</string>
    <string name="code_txt">xdwadwadwX</string>
    <string name="Enter_Exam_Code">Enter Exam Code</string>
    <string name="Enter_code">Enter code</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="Subject_Exam">Subject Exam</string>
    <string name="grades">Grades</string>
    <string name="GNED07">GNED07</string>
    <string name="cosc110">COSC110</string>
    <string name="GNED10">GNED10</string>

    //create exam prof
    <string name="Exam_Information">Exam Information</string>
    <string name="dateCreated1">Date Created:</string>
    <string name="date_created_txt">No Exam created yet</string>
    <string name="Exam_Code">Exam Code:</string>
    <string name="Exam_Code_TXT">No Exam created yet</string>
    <string name="Create_Exam_Code">Create Exam Code:</string>
    <string name="Create_Exam">Create Exam</string>
    <string name="Delete_Exam">Remove Exam</string>
    <string name="Update_Exam">Update Exam</string>
    <string name="Question">Question</string>
    <string name="Answer">Answer</string>
    <string name="Question1">Question #1</string>
    <string name="Question2">Question #2</string>
    <string name="Question3">Question #3</string>
    <string name="Question4">Question #4</string>
    <string name="Question5">Question #5</string>
    <string name="Question6">Question #6</string>
    <string name="Question7">Question #7</string>
    <string name="Question8">Question #8</string>
    <string name="Question9">Question #9</string>
    <string name="Question10">Question #10</string>
    <string name="Question11">Question #11</string>
    <string name="Question12">Question #12</string>
    <string name="Question13">Question #13</string>
    <string name="Question14">Question #14</string>
    <string name="Question15">Question #15</string>
    <string name="Question16">Question #16</string>
    <string name="Question17">Question #17</string>
    <string name="Question18">Question #18</string>
    <string name="Question19">Question #19</string>
    <string name="Question20">Question #20</string>
    <string name="Question21">Question #21</string>
    <string name="Question22">Question #22</string>
    <string name="Question23">Question #23</string>
    <string name="Question24">Question #24</string>
    <string name="Question25">Question #25</string>
    <string name="Question26">Question #26</string>
    <string name="Question27">Question #27</string>
    <string name="Question28">Question #28</string>
    <string name="Question29">Question #29</string>
    <string name="Question30">Question #30</string>
    <string name="Question31">Question #31</string>
    <string name="Question32">Question #32</string>
    <string name="Question33">Question #33</string>
    <string name="Question34">Question #34</string>
    <string name="Question35">Question #35</string>
    <string name="Question36">Question #36</string>
    <string name="Question37">Question #37</string>
    <string name="Question38">Question #38</string>
    <string name="Question39">Question #39</string>
    <string name="Question40">Question #40</string>
    <string name="great">Question?</string>
    <string name="Submit">Submit</string>
    <string name="copy_text">Copy Text</string>
    <string name="CLICK_TO_OPEN_CAMERA">CLICK TO OPEN CAMERA</string>


    //dropdowns
    <string name="dropdown_course">Course</string>
    <string name="dropdown_section">Section</string>
    <string name="dropdown_gender">Gender</string>
    <string name="dropdown_year">Year Level</string>
    <string name="dropdown_dept">Department</string>
    <string name="dropdown_subjCode">Subject Code</string>

    //numbering
    <string name="n1">1.</string>
    <string name="n2">2.</string>
    <string name="n3">3.</string>
    <string name="n4">4.</string>
    <string name="n5">5.</string>
    <string name="n6">6.</string>
    <string name="n7">7.</string>
    <string name="n8">8.</string>
    <string name="n9">9.</string>
    <string name="n10">10.</string>
    <string name="n11">11.</string>
    <string name="n12">12.</string>
    <string name="n13">13.</string>
    <string name="n14">14.</string>
    <string name="n15">15.</string>
    <string name="n16">16.</string>
    <string name="n17">17.</string>
    <string name="n18">18.</string>
    <string name="n19">19.</string>
    <string name="n20">20.</string>
    <string name="n21">21.</string>
    <string name="n22">22.</string>
    <string name="n23">23.</string>
    <string name="n24">24.</string>
    <string name="n25">25.</string>
    <string name="n26">26.</string>
    <string name="n27">27.</string>
    <string name="n28">28.</string>
    <string name="n29">29.</string>
    <string name="n30">30.</string>
    <string name="n31">31.</string>
    <string name="n32">32.</string>
    <string name="n33">33.</string>
    <string name="n34">34.</string>
    <string name="n35">35.</string>
    <string name="n36">36.</string>
    <string name="n37">37.</string>
    <string name="n38">38.</string>
    <string name="n39">39.</string>
    <string name="n40">40.</string>
    <string name="Answer1">Answer:</string>

</resources>